Added option to hide expanded images.

--- a/package/bin/main.html
+++ b/package/bin/main.html
@@ -151,6 +151,7 @@
     <div id="messages-and-input">
       <div id="topic-container">
         <button id="hide-channels" class="topbar-button">=</button>
+        <button id="hide-images" class="topbar-button">-</button>
         <div id="status" class="content-item"></div>
       </div>
       <div id="notice" class="hide">
